fix(properties panel): hide double border

--- a/client/src/app/tabs/PropertiesContainer.less
+++ b/client/src/app/tabs/PropertiesContainer.less
@@ -98,6 +98,10 @@
     --font-family: inherit;
     --font-family-monospace: inherit;
     background: var(--color-white);
+
+    .bio-properties-panel-scroll-container {
+      margin-bottom: -1px;
+    }
   }
 
 }
